🌱 Add note on standups

--- a/remote-working.qmd
+++ b/remote-working.qmd
@@ -13,3 +13,21 @@
 - We use these at The Strategy Unit to encourage cross-team chats.
 - RainbowR also [use a buddy scheme](https://rainbowr.org/buddies.html) to get community members to connect.
 - My PhD scheme has used it to allow current students to network with alumni
+
+## How to run a good standup / team meeting
+
+We have a team meeting every Monday. We like to check in on how everyone is, but as the team has grown, not everyone has time to speak. This is what we currently do.
+
+In advance of the weekly stand-up, all team members share a short summary, in Slack, answering the following questions:
+
+- ⭐ What went well last week
+- 🦉 What lessons did you learn
+- 🎯 Goal(s) for this week
+
+Two folk are randomly selected to actually speak in the meeting. This keeps standups not too long, whilst making sure it's not just the same voices always sharing.
+
+We encourage **reflection** over **listing**
+
+E.g.
+- :x: C&C was good, nice retro, did some inputs dev, caught up on my emails.
+- :white_check_mark: I've been practicing being less self-deprecating in meetings and successfully did a coffee & code session without down-talking my ability :raised_hands::skin-tone-2:
