--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,15 @@
 # Welcome 🌸
 
-Welcome to my digital garden.
+Welcome to my [digital garden](https://maggieappleton.com/garden-history).
 
-I made this garden for me, but you're welcome to wander through it.
+I struggle with [long form blogging](https://rhian.rbind.io/posts), so this a space for slowly turning shower-thoughts and stories into little opinionated snippets.
 
-- posts growing over time - shared early and developed in public
+My aim is to create a space where ideas are:
+
+- shared early
+
+- developed in public
 
 - constantly growing, evolving, and changing
+
+I made this garden for me, but you're welcome to wander through it. :seed:
