--- a/remote-working.qmd
+++ b/remote-working.qmd
@@ -14,7 +14,7 @@
 - RainbowR also [use a buddy scheme](https://rainbowr.org/buddies.html) to get community members to connect.
 - My PhD scheme has used it to allow current students to network with alumni
 
-## How to run a good standup / team meeting
+## How to run a good team standup 
 
 We have a team meeting every Monday. We like to check in on how everyone is, but as the team has grown, not everyone has time to speak. This is what we currently do.
 
@@ -26,8 +26,7 @@ In advance of the weekly stand-up, all team members share a short summary, in Sl
 
 Two folk are randomly selected to actually speak in the meeting. This keeps standups not too long, whilst making sure it's not just the same voices always sharing.
 
-We encourage **reflection** over **listing**
+We encourage **reflection** over **listing**, for example;
 
-E.g.
-- :x: C&C was good, nice retro, did some inputs dev, caught up on my emails.
-- :white_check_mark: I've been practicing being less self-deprecating in meetings and successfully did a coffee & code session without down-talking my ability :raised_hands::skin-tone-2:
+- ❌ C&C was good, nice retro, did some inputs dev, caught up on my emails.
+- ✅ I've been practicing being less self-deprecating in meetings and successfully did a coffee & code session without down-talking my ability 🙌
