--- a/index.qmd
+++ b/index.qmd
@@ -12,4 +12,4 @@ My aim is to create a space where ideas are:
 
 - constantly growing, evolving, and changing
 
-I made this garden for me, but you're welcome to wander through it. :seed:
+I made this garden for me, but you're welcome to wander through it. 🌱
